优化home首页样式,增加导航图片点击切换效果

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -10,3 +10,11 @@
 .onlyPicTitleMarginBottom{
   .mb(20)!important;
 }
+#mainContent{
+  transition:all 1s;
+}
+.navClickMainContent{
+  position: fixed;
+  .top(0);
+  transform:translate(50%,0);
+}
