--- a/src/style/tpl/nav_tpl.less
+++ b/src/style/tpl/nav_tpl.less
@@ -1,21 +1,25 @@
 .nav{
-  .h(64);
+  width:100%;
+  .lh(50);
   background-color: #12d5b5;
   text-align: center;
   color: #fff;
   .top(0);
   .left(0);
-  .right(0);
   position: fixed;
   z-index: 999;
-  i{
-    font-style: normal;
-    float: left;
-    .ml(5);
+  img{
+    .w(30);
+    .h(30);
+    padding: 8px;
+    position: absolute;
+    .top(8);
+    .left(0);
   }
   span{
-    font-family: '宋体';
-    .fs(26);
-    .ml(-10);
+    width: 100%;
+    font-family: '微软雅黑';
+    .fs(20);
+    .mb(10);
   }
 }
