--- a/src/view/tpl/nav_tpl.html
+++ b/src/view/tpl/nav_tpl.html
@@ -1,4 +1,6 @@
 <div class="nav">
-    <img src="images/navlist.png" ng-click="nav()">
+    <!--第一个图片为导航图标,第二个为返回图标-->
+    <img src="images/navlist.png" ng-click="nav()" >
+    <img src="images/goback.png" ng-click="goBack()" >
     <span ng-bind="title"></span>
 </div>
