--- a/src/style/index.less
+++ b/src/style/index.less
@@ -16,5 +16,9 @@
 .navClickMainContent{
   position: fixed;
   .top(0);
-  transform:translate(50%,0);
+  -webkit-transform: translate(50%,0);
+  -moz-transform: translate(50%,0);
+  -ms-transform: translate(50%,0);
+  -o-transform: translate(50%,0);
+  transform: translate(50%,0);
 }
