--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -8,7 +8,11 @@
 }
 .home-loading{
   .mt(50);
+  width: 100%;
   text-align: center;
+  img{
+    width: 70%;
+  }
 }
 .homemain{
   transition: all 0.8s;
