--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -6,6 +6,13 @@
   -o-transform: translate(100%,0);
   transform: translate(100%,0);
 }
+.detailCss{
+  -webkit-transform: translate(-100%,0);
+  -moz-transform: translate(-100%,0);
+  -ms-transform: translate(-100%,0);
+  -o-transform: translate(-100%,0);
+  transform: translate(-100%,0);
+}
 .home-loading{
   .mt(50);
   width: 100%;
