修改导航栏样式

--- a/src/style/tpl/detail_tpl.less
+++ b/src/style/tpl/detail_tpl.less
@@ -1,4 +1,14 @@
+.detailCss{
+  -webkit-transform: translate(100%,0);
+  -moz-transform: translate(100%,0);
+  -ms-transform: translate(100%,0);
+  -o-transform: translate(100%,0);
+  transform: translate(100%,0);
+}
+
 #detail-content{
+  transition: all 0.5s;
+  background: #f9f9f9;
   .mt(29);
   .mb(10);
   .fs(22);
