--- a/src/style/index.less
+++ b/src/style/index.less
@@ -11,14 +11,17 @@
   .mb(20)!important;
 }
 #mainContent{
-  transition:all 1s;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition:all 0.5s;
 }
 .navClickMainContent{
   position: fixed;
   .top(0);
-  -webkit-transform: translate(50%,0);
-  -moz-transform: translate(50%,0);
-  -ms-transform: translate(50%,0);
-  -o-transform: translate(50%,0);
-  transform: translate(50%,0);
+  -webkit-transform: translate(60%,0);
+  -moz-transform: translate(60%,0);
+  -ms-transform: translate(60%,0);
+  -o-transform: translate(60%,0);
+  transform: translate(60%,0);
 }
