--- a/src/view/tpl/tabbar_tpl.html
+++ b/src/view/tpl/tabbar_tpl.html
@@ -1,8 +1,10 @@
 <div class="tabbar">
     <ul>
-        <li ng-click="click('今日一刻')"><img src="images/tabicon/home_icon.png" alt=""><span ng-class="{cur:title == '今日一刻'}">首页</span></li>
-        <li ng-click="click('作者')"><img src="images/tabicon/author_icon.png" alt=""><span ng-class="{cur:title == '作者'}">作者</span></li>
-        <li ng-click="click('栏目')"><img src="images/tabicon/content_icon.png" alt=""><span ng-class="{cur:title == '栏目'}">栏目</span></li>
-        <li ng-click="click('我的')"><img src="images/tabicon/my_icon.png" alt=""><span ng-class="{cur:title == '我的'}">我的</span></li>
+        <li><img src="images/tabicon/home_icon.png" alt=""><span>登录</span></li>
+        <li ng-click="click('今日一刻')"><img src="images/tabicon/home_icon.png" alt=""><span ng-class="{cur:title == '今日一刻'}">今日一刻</span></li>
+        <li ng-click="click('往期内容')"><img src="images/tabicon/home_icon.png" alt=""><span ng-class="{cur:title == '往期内容'}">往期内容</span></li>
+        <li ng-click="click('热门作者')"><img src="images/tabicon/author_icon.png" alt=""><span ng-class="{cur:title == '热门作者'}">热门作者</span></li>
+        <li ng-click="click('栏目浏览')"><img src="images/tabicon/content_icon.png" alt=""><span ng-class="{cur:title == '栏目浏览'}">栏目浏览</span></li>
+        <li ng-click="click('我喜欢的')"><img src="images/tabicon/my_icon.png" alt=""><span ng-class="{cur:title == '我喜欢的'}">我喜欢的</span></li>
     </ul>
 </div>
