--- a/src/style/index.less
+++ b/src/style/index.less
@@ -13,12 +13,12 @@
 #mainContent{
   width: 100%;
   height: 100%;
-  position: relative;
+  //position: relative;
   transition:all 0.5s;
 }
 .navClickMainContent{
-  position: fixed;
-  .top(0);
+  //position: fixed;
+  //.top(0);
   -webkit-transform: translate(60%,0);
   -moz-transform: translate(60%,0);
   -ms-transform: translate(60%,0);
