--- a/src/style/tpl/tabbar_tpl.less
+++ b/src/style/tpl/tabbar_tpl.less
@@ -1,4 +1,5 @@
-.tabbar{
+#tabbar{
+  transition:all 1s;
   display: inline-block;
   height: 100%;
   width: 60%;
@@ -6,7 +7,7 @@
   left: -60%;
   .top(0);
   .p(15);
-  position: absolute;
+  position: fixed;
   z-index: 99999;
   border-right: solid #e0e0e0;
   .borderwidth(1);
