--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -7,14 +7,63 @@
   transform: translate(100%,0);
 }
 
-.home-loading{
+/*.home-loading{
   .mt(50);
   width: 100%;
   text-align: center;
   img{
     width: 70%;
   }
+}*/
+
+.home-loading{
+  .w(90);
+  .h(90);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  .mt(-30);
+  .ml(-45);
+  .double-bounce1, .double-bounce2{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #13ae8f;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-animation: bounce 2.0s infinite ease-in-out;
+    -moz-animation: bounce 2.0s infinite ease-in-out;
+    -ms-animation: bounce 2.0s infinite ease-in-out;
+    -o-animation: bounce 2.0s infinite ease-in-out;
+    animation: bounce 2.0s infinite ease-in-out;
+  }
+  .double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+    -moz-animation-delay: -1.0s;
+    -ms-animation-delay: -1.0s;
+    -o-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+  }
+  @keyframes bounce {
+    0%, 100% {
+      -webkit-transform: scale(0);
+      -moz-transform: scale(0);
+      -ms-transform: scale(0);
+      -o-transform: scale(0);
+      transform: scale(0);
+    }
+    50% {
+       -webkit-transform: scale(1);
+       -moz-transform: scale(1);
+       -ms-transform: scale(1);
+       -o-transform: scale(1);
+       transform: scale(1);
+      }
+  }
 }
+
 .homemain{
   transition: all 0.5s;
   background-color: #f9f9f9;
@@ -42,6 +91,7 @@
     .listtitle{
       .fs(24);
       .mt(15);
+      .mb(20);
       font-weight: 500;
     }
     .post1{
@@ -120,5 +170,43 @@
         color: #9c9c9c;
       }
     }
+  }
+}
+.authordetailstyle{
+  .list{
+    .listtitle{
+      .fs(20);
+      .mt(5);
+      font-weight: 500;
+      .mb(5)!important;
+    }
+    .post1{
+      p{
+        .fs(14)!important;
+        width: 76%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+      }
+      span{
+        width: 22%;
+        .h(70);
+      }
+    }
+    .post3{
+      p{
+        .fs(14)!important;
+        color: #9c9c9c;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+      }
+    }
+
+
   }
 }
