--- a/src/view/tpl/homelist_tpl.html
+++ b/src/view/tpl/homelist_tpl.html
@@ -5,6 +5,13 @@
 </div>
 <!--<div ng-show="isLoading" class="home-loading"><img src="http://omj9dkm9p.bkt.clouddn.com/loading.gif" alt=""></div>-->
 <div class="homemain" ng-class="{loading:isLoading,authordetailstyle:authormsg}">
+    <div ng-if="authormsg" class="author-top">
+        <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+authormsg.avatar}}" alt="">
+        <h2 ng-bind="authormsg.name"></h2>
+        <p ng-bind="authormsg.resume"></p>
+        <a ng-href="{{authormsg.url}}">去豆瓣主页</a>
+    </div>
+
     <div class="list" ng-repeat="(key,list) in homelist" ui-sref="app.detail({index:key})"><!--当点击home列表内容时,跳转到详情页路由,参数为索引值-->
         <span ng-if="list.column.name != ''" class="smallTitle" ng-bind="list.column.name"></span>
         <p  ng-bind="list.title" class="listtitle" ></p>
