完善导航点击样式,添加导航自动返回功能

--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -66,7 +66,7 @@
 
 .homemain{
   transition: all 0.5s;
-  background-color: #f9f9f9;
+  background-color: #f8f8f8;
   .pt(60);
   box-sizing: border-box;
   .mb(60);
@@ -84,15 +84,15 @@
       .w(80);
       .lh(26);
       color: #ffffff;
-      background-color: #c6c6c6;
+      background-color: #b6b6b6;
       text-align: center;
       .borderradius(0,0,5,5);
     }
     .listtitle{
-      .fs(24);
+      .fs(26);
       .mt(15);
       .mb(20);
-      font-weight: 500;
+      font-weight: 600;
     }
     .post1{
       overflow: hidden;
@@ -101,7 +101,7 @@
         width: 55%;
         .fs(15);
         .lh(24);
-        color: #9c9c9c;
+        color: #5f5f5f;
         float: left;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -167,7 +167,7 @@
       p{
         .fs(15);
         .lh(24);
-        color: #9c9c9c;
+        color: #5f5f5f;
       }
     }
   }
