--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -27,7 +27,9 @@
 .pb(@px){
   padding-bottom: unit(@px/37.5,rem);
 }
-
+.m(@px){
+  margin:unit(@px/37.5,rem);;
+}
 .mt(@px){
   margin-top:unit(@px/37.5,rem);;
 }
