--- a/src/view/tpl/nav_tpl.html
+++ b/src/view/tpl/nav_tpl.html
@@ -1,6 +1,10 @@
 <div class="nav" >
     <!--第一个图片为导航图标,第二个为返回图标-->
-    <img src="images/navlist.png"  ng-click="nav()">
-    <img src="images/goback.png" ng-click="goBack(event)" >
+    <a ng-click="nav()">
+        <img src="images/navlist.png">
+    </a>
+    <a ng-click="goBack(event)">
+        <img src="images/goback.png">
+    </a>
     <span ng-bind="title"></span>
 </div>
