--- a/src/view/tpl/tabbar_tpl.html
+++ b/src/view/tpl/tabbar_tpl.html
@@ -8,7 +8,7 @@
             <img src="images/02.png" alt="">
             <span ng-class="{cur:title == '今日一刻'}">今日一刻</span>
         </li>
-        <li ng-click="click('往期内容')">
+        <li ng-click="click('往期内容')" ui-sref="app.past">
             <img src="images/03.png" alt="">
             <span ng-class="{cur:title == '往期内容'}">往期内容</span>
         </li>
