--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,5 +1,5 @@
 body{
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
 @import "variable";
 @import "normalize";
@@ -11,10 +11,14 @@ body{
 .cur{
   color: #12d5b5;
 }
+homelist{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
 .onlyPicTitleMarginBottom{
   .mb(20)!important;
 }
-
 #mainContent{
   width: 100%;
   height: 100%;
@@ -24,7 +28,27 @@ body{
   z-index: -1;
 }
 #tabbar.tabbarIn{
-  left:0!important;
+  -webkit-transform: translateX(100%);
+  -moz-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  -o-transform: translateX(100%);
+  transform: translateX(100%);
+}
+@-webkit-keyframes tabbarin{
+  0%{
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100%{
+    -webkit-transform: translateX(60%);
+    -moz-transform: translateX(60%);
+    -ms-transform: translateX(60%);
+    -o-transform: translateX(60%);
+    transform: translateX(60%);
+  }
 }
 .noscroll{
   overflow: hidden;
