--- a/src/style/tpl/nav_tpl.less
+++ b/src/style/tpl/nav_tpl.less
@@ -9,25 +9,35 @@
   .left(0);
   position: fixed;
   z-index: 999;
-  img:first-of-type{
-    .w(30);
-    .h(30);
-    .p(10);
+  a{
+    width: 13%;
+    height: 100%;
     position: absolute;
     .top(0);
     .left(0);
   }
-  img:last-of-type{
-    .w(24);
-    .h(24);
-    .p(13);
-    position: absolute;
-    .top(0);
-    .left(-5);
+  a:first-of-type{
+    img{
+      .w(30);
+      .h(30);
+      .p(10);
+    }
+  }
+  a:last-of-type{
+    img{
+      .w(24);
+      .h(24);
+      .p(13);
+    }
+  }
+  a:active{
+    border-radius: 50%;
+    background-color: rgb(22, 239, 192);
   }
   span{
     width: 100%;
     .fs(20);
     .mb(10);
+    font-weight: 600;
   }
 }
