完善导航快速隐藏点击,开始做登录页面

--- a/src/style/tpl/tabbar_tpl.less
+++ b/src/style/tpl/tabbar_tpl.less
@@ -10,7 +10,8 @@
   z-index: 99999;
   border-right: solid #e0e0e0;
   .borderwidth(1);
-  box-shadow: -1px -5px 20px #c1c1c1 inset;
+  box-sizing: border-box;
+  box-shadow: -2px -0px 8px #d2d2d2 inset;
   ul{
     width: 85%;
     list-style: none;
