--- a/src/style/index.less
+++ b/src/style/index.less
@@ -8,6 +8,7 @@ body{
 @import "tpl/homelist_tpl";
 @import "tpl/detail_tpl";
 @import "tpl/author_tpl";
+@import "tpl/login_tpl";
 .cur{
   color: #12d5b5;
 }
