--- a/src/view/tpl/login_tpl.html
+++ b/src/view/tpl/login_tpl.html
@@ -1,3 +1,19 @@
-<!--
-写一个指令,切换路由加载指令,指令中监听关闭按钮,点击按钮后退
--->
+<div class="login-close">
+    <span>×</span>
+</div>
+<h1>一刻</h1>
+<div class="login-input">
+    <form action="">
+        <div class="login-input-user">
+            <input type="text" placeholder="豆瓣账号 (邮箱/手机号)">
+            <img src="../images/user.png" alt="">
+        </div>
+        <div class="login-input-password">
+            <input type="password" placeholder="密码">
+            <img src="../images/password.png" alt="">
+        </div>
+        <a >忘记密码</a>
+        <input type="submit" value="登录">
+    </form>
+</div>
+<a class="regist">注册</a>
