--- a/src/view/tpl/tabbar_tpl.html
+++ b/src/view/tpl/tabbar_tpl.html
@@ -1,6 +1,6 @@
 <div id="tabbar"  ng-class="{tabbarIn:isNav}">
     <ul>
-        <li >
+        <li ng-click="isNav = !isNav" ui-sref="app.login">
             <img src="images/my_icon.png" alt="">
             <span>登录</span>
         </li>
