登录一级页面完成,包含动画效果以及输入框交互

--- a/src/view/tpl/tabbar_tpl.html
+++ b/src/view/tpl/tabbar_tpl.html
@@ -1,6 +1,6 @@
 <div id="tabbar"  ng-class="{tabbarIn:isNav}">
     <ul>
-        <li ng-click="isNav = !isNav" ui-sref="app.login">
+        <li ng-click="isNav = !isNav ; loginIn = !loginIn" >
             <img src="images/my_icon.png" alt="">
             <span>登录</span>
         </li>
