--- a/src/style/tpl/login_tpl.less
+++ b/src/style/tpl/login_tpl.less
@@ -1,15 +1,21 @@
+.loginHidden{
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  -o-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
 login{
+  transition: all 0.5s;
   width: 100%;
   height: 100%;
-  background:url("../images/loginbg2.jpg") no-repeat;
-  //background-image: linear-gradient(120deg, #17dbad 0%, #8fd3f4 100%);
-  //background-image: linear-gradient(to top, #96fbc4 0%, #f9f586 100%);
-  //background-image: linear-gradient(to top, #179c79 0%, #17ffcf 100%);
+  //background:url("../images/loginbg2.jpg") no-repeat;
+  background-image: linear-gradient(120deg, #17dbad 20%, #8fd3f4 120%);
   -webkit-background-size:cover;
   background-size:cover;
   display: inline-block;
   color: #fff;
-  .top(0);
+  top: 100%;
   .left(0);
   position: fixed;
   z-index: 999999999;
@@ -38,12 +44,11 @@ login{
     text-align: left;
     span{
       display: inline-block;
+      .w(24);
+      .h(24);
+      .lh(24);
+      .fs(20);
       text-align: center;
-      .w(25);
-      .h(25);
-      .lh(25);
-      .fs(32);
-      font-weight: 100;
       background-color: rgba(255,255,255,.4);
       border-radius: 50%;
     }
@@ -60,25 +65,48 @@ login{
     div{
       position: relative;
       width: 100%;
-    }
-    .login-input-user{
       img{
-
+        .w(26);
+        .h(26);
+        position: absolute;
+        .top(7);
+        .left(7);
+        z-index: 1;
+        opacity: 0.7;
+      }
+      span{
+        .w(22);
+        .h(22);
+        .lh(22);
+        .fs(16);
+        border-radius: 50%;
+        position: absolute;
+        .top(9);
+        .right(9);
+        z-index: 1;
+        opacity: 0.7;
+        color: #000;
+        background-color: #ccc;
       }
     }
-
     input{
       width: 100%;
-      .h(40);
+      .h(30);
       .borderradius(5,5,5,5);
       border: none;
       .mb(20);
+      .fs(15);
       text-indent: 3em;
+      .pt(5);
+      .pb(5);
     }
-    input:nth-of-type(2){
-      .mb(0);
+    div:nth-of-type(2){
+      input{
+        .mb(0);
+      }
     }
-    input:nth-of-type(3){
+    .login-submit{
+      .h(40);
       text-indent: 0;
       color: #fff;
       background-color: rgba(26, 177, 158, 0.85);
@@ -93,7 +121,7 @@ login{
   }
   .regist{
     display: inline-block;
-    .mt(100);
+    .mt(40);
     .w(50);
     .lh(40);
   }
