--- a/src/view/tpl/login_tpl.html
+++ b/src/view/tpl/login_tpl.html
@@ -1,19 +1,22 @@
 <div class="login-close">
-    <span>×</span>
+    <span ng-click="loginIn = !loginIn">X</span>
 </div>
 <h1>一刻</h1>
 <div class="login-input">
     <form action="">
-        <div class="login-input-user">
-            <input type="text" placeholder="豆瓣账号 (邮箱/手机号)">
+        <div>
+            <input type="text" placeholder="豆瓣账号 (邮箱/手机号)" ng-model="uservalue" ng-focus="userblur = true" ng-blur="blur('user')">
+            <span ng-click="uservalue = ''" ng-show="uservalue && userblur">X</span>
             <img src="../images/user.png" alt="">
         </div>
-        <div class="login-input-password">
-            <input type="password" placeholder="密码">
+        <div>
+            <input type="password" placeholder="密码" ng-model="passwordvalue" ng-focus="passwordblur = true" ng-blur="blur('password')">
+            <span ng-click="passwordvalue = ''" ng-show="passwordvalue && passwordblur">X</span>
             <img src="../images/password.png" alt="">
+
         </div>
         <a >忘记密码</a>
-        <input type="submit" value="登录">
+        <input class="login-submit" type="submit" value="登录">
     </form>
 </div>
 <a class="regist">注册</a>
