--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -18,7 +18,7 @@
 .home-loading{
   .w(90);
   .h(90);
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   .mt(-30);
@@ -160,7 +160,7 @@
         z-index: 8;
         background-color: transparent;
       }
-    }
+      }
     .post3{
       p{
         .fs(15);
@@ -223,6 +223,22 @@
         .h(70);
       }
     }
+    .post2{
+      .h(75);
+      div:last-of-type {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        img {
+          width: 30%;
+          .h(70);
+          .mr(12);
+        }
+        img:last-of-type{
+          .mr(0);
+        }
+      }
+    }
     .post3{
       p{
         .fs(14)!important;
@@ -234,7 +250,5 @@
         -webkit-box-orient: vertical;
       }
     }
-
-
   }
 }
