--- a/src/view/tpl/homelist_tpl.html
+++ b/src/view/tpl/homelist_tpl.html
@@ -1,34 +1,42 @@
-
-<div class="home-loading" ng-show="isLoading" >
-    <div class="double-bounce1"></div>
-    <div class="double-bounce2"></div>
-</div>
-<!--<div ng-show="isLoading" class="home-loading"><img src="http://omj9dkm9p.bkt.clouddn.com/loading.gif" alt=""></div>-->
-<div class="homemain" ng-class="{loading:isLoading,authordetailstyle:authormsg}">
-    <div ng-if="authormsg" class="author-top">
-        <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+authormsg.avatar}}" alt="">
-        <h2 ng-bind="authormsg.name"></h2>
-        <p ng-bind="authormsg.resume"></p>
-        <a ng-href="{{authormsg.url}}">去豆瓣主页</a>
+<div id="list_scroll">
+    <div class="home-loading" ng-show="isLoading" >
+        <div class="double-bounce1"></div>
+        <div class="double-bounce2"></div>
     </div>
 
-    <div class="list" ng-repeat="(key,list) in homelist" ui-sref="app.detail({index:key})"><!--当点击home列表内容时,跳转到详情页路由,参数为索引值-->
-        <span ng-if="list.column.name != ''" class="smallTitle" ng-bind="list.column.name"></span>
-        <p  ng-bind="list.title" class="listtitle" ></p>
-        <div class="post1" ng-if="list.display_style == 10002">
-            <p ng-bind="list.abstract"></p>
-            <span style="background-image: url(http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl={{list.thumbs[0].small.url}})">
+    <div class="homemain" ng-class="{loading:isLoading,authordetailstyle:(authormsg||pastnow)}">
+        <div ng-if="authormsg" class="author-top">
+            <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+authormsg.avatar}}" alt="">
+            <h2 ng-bind="authormsg.name"></h2>
+            <p ng-bind="authormsg.resume"></p>
+            <a ng-href="{{authormsg.url}}">去豆瓣主页</a>
+        </div>
+
+        <div class="list" ng-repeat="(key,list) in homelist" ui-sref="app.detail({index:key})"><!--当点击home列表内容时,跳转到详情页路由,参数为索引值-->
+            <span ng-if="list.column.name != ''" class="smallTitle" ng-bind="list.column.name"></span>
+            <p  ng-bind="list.title" class="listtitle" ></p>
+            <div class="post1" ng-if="list.display_style == 10002">
+                <p ng-bind="list.abstract"></p>
+                <span style="background-image: url(http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl={{list.thumbs[0].small.url}})">
             </span>
-        </div>
-        <div class="post2" ng-if="list.display_style == 10003">
-            <div class="post2-img" >
-                <img id="post2Img" ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[0].small.url}}" style="top:{{-list.thumbs[0].small.height/2+100+'px'}}">
             </div>
-            <div class="border1"></div>
-            <div class="border2"></div>
-        </div>
-        <div class="post3" ng-if="list.display_style == 10001">
-            <p ng-bind="list.abstract"></p>
+            <div class="post2" ng-if="list.display_style == 10003">
+                <div ng-if="!(authormsg||pastnow)">
+                    <div class="post2-img" >
+                        <img id="post2Img" ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[0].small.url}}" style="top:{{-list.thumbs[0].small.height/2+100+'px'}}">
+                    </div>
+                    <div class="border1"></div>
+                    <div class="border2"></div>
+                </div>
+                <div ng-if="authormsg||pastnow">
+                    <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[0].small.url}}" style="top:{{-list.thumbs[0].small.height/2+100+'px'}}">
+                    <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[1].small.url}}" style="top:{{-list.thumbs[1].small.height/2+100+'px'}}">
+                    <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[2].small.url}}" style="top:{{-list.thumbs[2].small.height/2+100+'px'}}">
+                </div>
+            </div>
+            <div class="post3" ng-if="list.display_style == 10001">
+                <p ng-bind="list.abstract"></p>
+            </div>
         </div>
     </div>
 </div>
