--- a/src/view/tpl/homelist_tpl.html
+++ b/src/view/tpl/homelist_tpl.html
@@ -1,26 +1,41 @@
 <div id="list_scroll">
-    <div class="home-loading" ng-if="(isLoading && helpLoading)" >
+    <!--今日一刻和热门作者详情加载中等待动画-->
+    <div class="home-loading" ng-show="(isLoading && helpLoading)" >
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
     </div>
 
-    <div class="homemain" ng-class="{loading:(isLoading && helpLoading),authordetailstyle:(authormsg||pastnow)}">
+    <!--列表主体内容-->
+    <div class="homemain"
+         ng-class="{loading:(isLoading && helpLoading),authordetailstyle:(authormsg||pastnow)}">
+        <!--作者简介,当在作者主页时显示-->
         <div ng-if="authormsg" class="author-top">
             <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+authormsg.avatar}}" alt="">
             <h2 ng-bind="authormsg.name"></h2>
             <p ng-bind="authormsg.resume"></p>
             <a ng-href="{{authormsg.url}}">去豆瓣主页</a>
         </div>
+        <!--循环遍历的列表项-->
+        <div class="list"
+             ng-repeat="(key,list) in homelist"
+             ng-click="toDetail()"
+             ui-sref="app.detail({index:key})">
 
-        <div class="list" ng-repeat="(key,list) in homelist" ui-sref="app.detail({index:key})"><!--当点击home列表内容时,跳转到详情页路由,参数为索引值-->
-            <span ng-if="list.column.name != ''" class="smallTitle" ng-bind="list.column.name"></span>
+
+            <span class="smallTitle"
+                  ng-if="list.column.name"
+                  ng-bind="list.column.name">
+            </span>
             <p  ng-bind="list.title" class="listtitle" ></p>
+            <!--单张图片有文字的样式-->
             <div class="post1" ng-if="list.display_style == 10002">
                 <p ng-bind="list.abstract"></p>
                 <span style="background-image: url(http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl={{list.thumbs[0].small.url}})">
             </span>
             </div>
+            <!--纯图片无文字的样式-->
             <div class="post2" ng-if="list.display_style == 10003">
+                <!--在今日一刻加载的页面效果,单图片有边框效果-->
                 <div ng-if="!(authormsg||pastnow)">
                     <div class="post2-img" >
                         <img id="post2Img" ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[0].small.url}}" style="top:{{-list.thumbs[0].small.height/2+100+'px'}}">
@@ -28,20 +43,32 @@
                     <div class="border1"></div>
                     <div class="border2"></div>
                 </div>
+                <!--在往期内容和作者主页加载的页面效果,只显示三张小图片-->
                 <div ng-if="authormsg||pastnow">
                     <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[0].small.url}}" style="top:{{-list.thumbs[0].small.height/2+100+'px'}}">
                     <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[1].small.url}}" style="top:{{-list.thumbs[1].small.height/2+100+'px'}}">
                     <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[2].small.url}}" style="top:{{-list.thumbs[2].small.height/2+100+'px'}}">
                 </div>
             </div>
+            <!--纯文字无图片的样式-->
             <div class="post3" ng-if="list.display_style == 10001">
                 <p ng-bind="list.abstract"></p>
             </div>
         </div>
     </div>
 
-<!--    <div class="home-loading" ng-show="(isLoading && !pastnow)" >
+    <!--今日一刻页面显示的跳转按钮-->
+    <div ng-if="(authormsg || helpLoading)"
+         class="go-past"
+         ng-click="goPast()"
+         ng-show="!isLoading">
+        <a ui-sref="app.past">往期内容</a>
+    </div>
+
+    <!--往期内容加载中等待动画-->
+    <div class="home-loading data-loading"
+         ng-show="(isLoading && !helpLoading)">
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
-    </div>-->
+    </div>
 </div>
