增加往期内容事件标题,以及标题的自动切换

--- a/src/view/tpl/homelist_tpl.html
+++ b/src/view/tpl/homelist_tpl.html
@@ -19,8 +19,12 @@
         <div class="list"
              ng-repeat="(key,list) in homelist"
              ng-click="toDetail()"
+             ng-class="{isTopList:list.topdate}"
              ui-sref="app.detail({index:key})">
 
+            <div ng-class="{listDate:list.topdate, isPastNow:list.isPast}"
+                 ng-if="list.topdate"
+                 ng-bind="list.topdate"></div>
 
             <span class="smallTitle"
                   ng-if="list.column.name"
