--- a/src/style/tpl/detail_tpl.less
+++ b/src/style/tpl/detail_tpl.less
@@ -4,10 +4,11 @@
   -ms-transform: translate(100%,0);
   -o-transform: translate(100%,0);
   transform: translate(100%,0);
+  opacity: 0;
 }
 
 #detail-content{
-  transition: all 0.5s;
+  transition: all 1s;
   background: #f9f9f9;
   .mt(29);
   .mb(10);
