--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -5,10 +5,10 @@
   -ms-transform: translate(100%,0);
   -o-transform: translate(100%,0);
   transform: translate(100%,0);
+  opacity: 0;
 }
-//全局背景色
 #list_scroll{
-  //background-color: #f8f8f8;
+  .pt(50);
 }
 //-B加载动画
 .home-loading{
@@ -19,7 +19,6 @@
   left: 50%;
   .mt(-30);
   .ml(-45);
-  //background-color: #f8f8f8;
   .double-bounce1, .double-bounce2{
     width: 100%;
     height: 100%;
@@ -65,7 +64,7 @@
 .data-loading{
   width: 100%;
   .h(300);
-  //background-color: #f8f8f8;
+  background-color: #f8f8f8;
   position: relative;
   .top(0);
   .left(0);
@@ -83,9 +82,9 @@
 
 //-B主体样式
 .homemain{
-  transition: all 0.5s;
-  .pt(50);
+  transition: all 1s;
   box-sizing: border-box;
+  background-color: #f8f8f8;
   .list{
     height: auto;
     border-top: solid #ccc;
@@ -94,6 +93,15 @@
     .p(20);
     .pt(0);
     box-sizing: border-box;
+    .listDate{
+      width: 100%;
+      .lh(40);
+      position: absolute;
+      .top(-41);
+      .left(0);
+      text-indent: 1em;
+      background-color: #f8f8f8;
+    }
     .smallTitle{
       display: block;
       .fs(13);
@@ -186,7 +194,16 @@
         color: #5f5f5f;
       }
     }
+    .pastListDate{
+      position: fixed;
+      .top(49);
+      z-index: 999;
+    }
   }
+  .isTopList{
+    .mt(40);
+  }
+
 }
 //-E主体样式
 
