--- a/src/view/tpl/login_tpl.html
+++ b/src/view/tpl/login_tpl.html
@@ -7,12 +7,12 @@
         <div>
             <input type="text" placeholder="豆瓣账号 (邮箱/手机号)" ng-model="uservalue" ng-focus="userblur = true" ng-blur="blur('user')">
             <span ng-click="uservalue = ''" ng-show="uservalue && userblur">X</span>
-            <img src="../images/user.png" alt="">
+            <img src="images/user.png" alt="">
         </div>
         <div>
             <input type="password" placeholder="密码" ng-model="passwordvalue" ng-focus="passwordblur = true" ng-blur="blur('password')">
             <span ng-click="passwordvalue = ''" ng-show="passwordvalue && passwordblur">X</span>
-            <img src="../images/password.png" alt="">
+            <img src="images/password.png" alt="">
 
         </div>
         <a >忘记密码</a>
