--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -10,6 +10,7 @@
 #list_scroll{
   .pt(50);
 }
+
 //-B加载动画
 .home-loading{
   .w(90);
@@ -94,13 +95,18 @@
     .pt(0);
     box-sizing: border-box;
     .listDate{
+      transition: all 0.5s;
       width: 100%;
       .lh(40);
       position: absolute;
       .top(-41);
       .left(0);
-      text-indent: 1em;
+      text-indent: 0.5em;
       background-color: #f8f8f8;
+      .fs(18);
+      font-weight: bold;
+      color: #444444;
+      opacity: 0.3;
     }
     .smallTitle{
       display: block;
@@ -197,7 +203,8 @@
     .pastListDate{
       position: fixed;
       .top(49);
-      z-index: 999;
+      z-index: 99;
+      opacity: 1;
     }
   }
   .isTopList{
