详情页收藏按钮相关逻辑已完成

--- a/src/style/tpl/tabbar_tpl.less
+++ b/src/style/tpl/tabbar_tpl.less
@@ -1,4 +1,8 @@
 #tabbar{
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   transition:all 0.4s;
   display: inline-block;
   height: 100%;
