--- a/src/style/tpl/nav_tpl.less
+++ b/src/style/tpl/nav_tpl.less
@@ -14,16 +14,17 @@
     height: 100%;
     position: absolute;
     .top(0);
-    .left(0);
   }
-  a:first-of-type{
+  a:nth-of-type(1){
+    .left(0);
     img{
       .w(30);
       .h(30);
       .p(10);
     }
   }
-  a:last-of-type{
+  a:nth-of-type(2){
+    .left(0);
     img{
       .w(24);
       .h(24);
@@ -39,5 +40,20 @@
     .fs(20);
     .mb(10);
     font-weight: 600;
+  }
+  a:nth-of-type(3){
+    transition: all 0.5s;
+    width: 13%;
+    .top(0);
+    .right(0);
+    img{
+      //transition: all 0.5s;
+      .w(34);
+      .h(36);
+      position: absolute;
+      .top(0);
+      .left(0);
+      .p(7);
+    }
   }
 }
