--- a/src/view/tpl/tabbar_tpl.html
+++ b/src/view/tpl/tabbar_tpl.html
@@ -20,7 +20,7 @@
             <img src="images/05.png" alt="">
             <span ng-class="{cur:title == '栏目浏览'}">栏目浏览</span>
         </li>
-        <li ng-click="click('我喜欢的')">
+        <li ng-click="click('我喜欢的')" ui-sref="app.iLike">
             <img src="images/06.png" alt="">
             <span ng-class="{cur:title == '我喜欢的'}">我喜欢的</span>
         </li>
