--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -10,6 +10,9 @@
 #list_scroll{
   .pt(50);
 }
+.onLikemarginTop{
+  .pt(90)!important;
+}
 
 //-B加载动画
 .home-loading{
@@ -210,7 +213,6 @@
   .isTopList{
     .mt(40);
   }
-
 }
 //-E主体样式
 
