--- a/src/view/tpl/homelist_tpl.html
+++ b/src/view/tpl/homelist_tpl.html
@@ -7,7 +7,7 @@
 
     <!--列表主体内容-->
     <div class="homemain"
-         ng-class="{loading:(isLoading && helpLoading),authordetailstyle:(authormsg||pastnow)}">
+         ng-class="{loading:(isLoading && helpLoading),authordetailstyle:(authormsg||pastnow||isLikeNow)}">
         <!--作者简介,当在作者主页时显示-->
         <div ng-if="authormsg" class="author-top">
             <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+authormsg.avatar}}" alt="">
@@ -42,7 +42,7 @@
             <!--纯图片无文字的样式-->
             <div class="post2" ng-if="list.display_style == 10003">
                 <!--在今日一刻加载的页面效果,单图片有边框效果-->
-                <div ng-if="!(authormsg||pastnow)">
+                <div ng-if="!(authormsg||pastnow||isLikeNow)">
                     <div class="post2-img" >
                         <img id="post2Img" ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[0].small.url}}" style="top:{{-list.thumbs[0].small.height/2+100+'px'}}">
                     </div>
@@ -50,7 +50,7 @@
                     <div class="border2"></div>
                 </div>
                 <!--在往期内容和作者主页加载的页面效果,只显示三张小图片-->
-                <div ng-if="authormsg||pastnow">
+                <div ng-if="authormsg||pastnow||isLikeNow">
                     <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[0].small.url}}" style="top:{{-list.thumbs[0].small.height/2+100+'px'}}">
                     <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[1].small.url}}" style="top:{{-list.thumbs[1].small.height/2+100+'px'}}">
                     <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.thumbs[2].small.url}}" style="top:{{-list.thumbs[2].small.height/2+100+'px'}}">
