添加收藏数,以及取消收藏动态改变收藏数功能

--- a/src/view/tpl/nav_tpl.html
+++ b/src/view/tpl/nav_tpl.html
@@ -8,7 +8,13 @@
     </a>
     <span ng-bind="title"></span>
     <a >
-        <img src="images/whiteheart.png" ng-show="!isInLike" ng-click="saveLike()">
-        <img src="images/redheart.png" ng-show="isInLike" ng-click="deleteLike()">
+        <img src="images/whiteheart.png"
+             ng-show="!isInLike"
+             ng-click="saveLike()">
+
+        <img src="images/redheart.png"
+             ng-show="isInLike"
+             ng-click="deleteLike()">
+        <span ng-bind="detailObj.like_count"></span>
     </a>
 </div>
