优化文章详情以及作者详情页点击具体参数索引值的传递方式,从而避免控制台关于参数索引值找不到的报错,已修复

--- a/src/view/tpl/authorlist_tpl.html
+++ b/src/view/tpl/authorlist_tpl.html
@@ -4,8 +4,10 @@
         <h2>热门作者</h2>
     </div>
     <ul>
-        <li ng-repeat="(key,list) in authrolist" ui-sref="app.authordetail({index:key})">
-            <img ng-src="{{'http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl='+list.avatar}}" >
+        <li ng-repeat="(key,list) in authrolist"
+            ui-sref="app.authordetail"
+            ng-click="authortitle(list)">
+            <img lazy-img="{{list.avatar}}" >
             <dl>
                 <dt ng-bind="list.name"></dt>
                 <dd ng-bind="list.editor_notes"></dd>
