--- a/src/view/tpl/authorlist_tpl.html
+++ b/src/view/tpl/authorlist_tpl.html
@@ -14,4 +14,10 @@
             </dl>
         </li>
     </ul>
+    <p ng-if="noMore">暂时没有更多热门作哦～</p>
+    <div class="home-loading data-loading"
+         ng-show="isLoading">
+        <div class="double-bounce1"></div>
+        <div class="double-bounce2"></div>
+    </div>
 </div>
