--- a/src/style/tpl/detail_tpl.less
+++ b/src/style/tpl/detail_tpl.less
@@ -11,7 +11,7 @@
   transition: all 0.6s;
   background: #f9f9f9;
   .mt(29);
-  .mb(10);
+  //.mb(10);
   .fs(22);
   a{
     color: #12d5b5;
@@ -65,7 +65,7 @@
     p{
       .fs(20);
       .lh(26);
-      letter-spacing: 2px;
+      letter-spacing: 1px;
       .mt(15);
       .mb(15);
     }
