--- a/src/view/tpl/authorlist_tpl.html
+++ b/src/view/tpl/authorlist_tpl.html
@@ -14,7 +14,7 @@
             </dl>
         </li>
     </ul>
-    <p ng-if="noMore">暂时没有更多热门作哦～</p>
+    <p ng-if="noMore">暂时没有更多热门作者哦～</p>
     <div class="home-loading data-loading"
          ng-show="isLoading">
         <div class="double-bounce1"></div>
